<resources>
    <string name="app_name">Ramadan App</string>
    <string name="hello_world">ভাষা হোক উন্মুক্ত</string>
    <string name="title_activity_quran">কুরআনের বাণী</string>
    <string name="title_activity_hadith">হাদীসের বাণী</string>
    <string name="title_activity_masala">মাসয়ালা</string>
    <string name="title_activity_dua">দোয়া দরূদ</string>
    <string name="title_activity_seheri_ifter_time">সেহেরী ও ইফতারের সূচী</string>
    <string name="title_activity_tasbih">তসবিহ</string>
    <string name="title_activity_food_habit">রমজানের খাদ্যাভ্যাস</string>
    <string name="title_activity_alarm"> এলার্ম </string>
    <string name="title_settings">সেটিংস</string>
    <string name="title_activity_sehri_and_ifter_short_form">সেহেরী ও ইফতারের সূচী</string>
    <string name="sehri_iftar_first_note">জেলার স্থানীয় সময় অনুযায়ী আজকের\n\nসেহরীর শেষ সময়</string>
    <string name="ifter_time_note">ইফতারের সময়</string>
    <string name="sehri_button_view">পুরো রমজানের সূচী দেখুন</string>
    <string name="title_activity_district_input">DistrictInputActivity</string>
    <string name="district_submit_button">Submit</string>
    <string name="title_logo">Loading...</string>
    <string name="txt_showthe">Show the notification for the day</string>
    <string name="txt_nottime">Notification Time   </string>
    <string name="txt_time">02:00 AM</string>
    <string name="action_notification">Get notification</string>
    <string name="title_notification"> দিনের অধিসুচনা </string>
    <string name="first_notification">রোযা রাখা যেমন ফরয তেমনি  রোযার নিয়ত করা ফরয  </string>
    <string name="tasbih_counter_setting">তসবিহ এর কাউন্টার সেট করুন</string>
    <string name="tasbih_counter_set_button">Submit</string>
    <string name="district_name_setting_note">জেলার নাম পরিবর্তন করুনঃ</string>
    <string name="date_text_view">আজ  </string>
    <string name="ramadan">রমজান</string>
    <string name="shaban">শাবান</string>
    <string name="hijri">১৪৩৬ হিজরী)</string>
    <string name="district_name_all">জেলার সম্পূর্ণ সূচী</string>
    <string name="ramadan_month">রমজান</string>
    <string name="english_date">ইংরেজী</string>
    <string name="sehri_last">সেহরী</string>
    <string name="iftar">ইফতার</string>
    <string name="all_district_time_show_button">সকল জেলার সূচী দেখুন</string>
    <string-array name="hadis_title">
        <item>"রমযান কি"</item>
        <item>"ইসলামী শরীয়তে রোযা ও তার পর্যায়ক্"</item>
        <item>"আমরা কিভাবে রমযানের জন্য প্রস্তুতি নিব? এই মহান মাসে কোন কাজটি সর্বোত্তম?"</item>

        <item>"রমাযানে যে যে কাজ করা রোযাদারের কর্তব্"</item>
        <item>"রমাযানের রোযায় মানুষের শ্রেণীভেদ"</item>
        <item>"যাকাতের পরিচয়"</item>



    </string-array>
</resources>