<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#66ffff">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_showthe"
        android:id="@+id/checkBoxmain"
        android:checked="true"
        />
    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingLeft="50dp"
        android:id="@+id/notification_user_time"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nottime"
            android:paddingRight="3dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/bttimeshow"
            android:text="@string/txt_time"
            android:background="@android:color/background_light" />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:padding="20dp"-->
        <!--android:id="@+id/tasbihSettingLayout">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="@string/tasbih_counter_setting"-->
            <!--android:id="@+id/tasbihCounterSetTextView" />-->

        <!--<LinearLayout-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/tasbihCounterInput"-->
            <!--android:weightSum="3"-->
            <!--android:focusable="true"-->
            <!--android:focusableInTouchMode="true">-->

            <!--<EditText-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="number"-->
                <!--android:ems="10"-->
                <!--android:layout_weight="2"-->
                <!--android:id="@+id/tasbihCounterSetEditText"-->
                <!--/>-->

            <!--<Button-->
                <!--style="?android:attr/buttonStyleSmall"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/tasbih_counter_set_button"-->
                <!--android:id="@+id/tasbihCounterButton"-->
                <!--android:layout_weight="1"-->
                <!--android:onClick="tasbihCounterSet"/>-->
        <!--</LinearLayout>-->

    <!--</LinearLayout>-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:id="@+id/districtNameSetting">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/district_name_setting_note"
            android:id="@+id/textView2" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="18"
                android:layout_weight="2">
                <!--<requestFocus />-->
            </AutoCompleteTextView>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/district_submit_button"
                android:id="@+id/districtButton"
                android:layout_gravity="center_horizontal"
                android:onClick="saveDistrict"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
