<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/default_background"
    tools:context="com.example.theoakteam.ramadanapp.SehriAndIfterShortForm">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
        >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="5"
        >

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/dateLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_text_view"
            android:textSize="30sp"
            android:id="@+id/dateEnglishTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Arabic Date"
            android:textSize="25sp"
            android:id="@+id/arabicTextView"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/dateLayout"
        android:layout_marginTop="20dp"
        android:layout_weight="2.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="District Name"
            android:id="@+id/sehri_iftar_initial_note" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="000"
            android:id="@+id/sehriTextView"
            android:layout_below="@+id/sehri_iftar_initial_note"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ifter_time_note"
            android:id="@+id/iftarTimeNoteTextView"
            android:textSize="25sp"
            android:layout_below="@+id/sehriTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="000"
            android:id="@+id/iftarTextView"
            android:layout_below="@+id/iftarTimeNoteTextView" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1.5"
        android:padding="20dp">

        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:text="@string/sehri_button_view"
            android:id="@+id/fullTimeShowButton"
            android:background="@drawable/added_button"
            android:onClick="showFullTime"/>


        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:text="@string/all_district_time_show_button"
            android:background="@drawable/added_button"
            android:onClick="showAllDistrict"
            android:id="@+id/showAllDistrictButton" />

    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
